--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">FinalProject</string>
+    <string name="CovidNavButton">Covid-19</string>
+    <string name="AudioNavButton">Base de données audio</string>
+    <string name="RecipeNavButton">Recette</string>
+    <string name="TicketMasterNavButton">TicketMaster</string>
 </resources>
