--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">FinalProject</string>
+    <string name="CovidNavButton">Covid-19</string>
+    <string name="AudioNavButton">Audio Database</string>
+    <string name="RecipeNavButton">Recipe</string>
+    <string name="TicketMasterNavButton">TicketMaster</string>
 
 </resources>
