--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -5,4 +5,5 @@
     <string name="AudioNavButton">Base de données audio</string>
     <string name="RecipeNavButton">Recette</string>
     <string name="TicketMasterNavButton">TicketMaster</string>
+    <string name="EmptyNavButton">Bouton de navigation vide</string>
 </resources>
